# nlang

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  buildll.ps1  genll.ps1  package-lock.json  package.json  run_nlang_tests.ps1  test_all.ps1  tsconfig.json
examples/: x.txt
examples/nlg/: main.nlg
examples/nlgx/: conditional-statements.nlgx  example.nlgx  fs.nlgx  hello_world.nlgx  math.nlgx
nlang-syntax/: CHANGELOG.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vsc-extension-quickstart.md
nlang-syntax/server/: package-lock.json  package.json
nlang-syntax/src/: extension.ts
nlang-syntax/syntaxes/: nlang.tmLanguage.json
nlang_test_writes/: 01_hello_world.nlang  02_variables_and_types.nlang  03_arithmetic_operations.nlang  04_control_flow.nlang  05_loops.nlang  06_functions.nlang  07_string_operations.nlang  08_type_conversions.nlang  09_calculator.nlang  10_utility_library.nlang  11_int_data_types.nlang  12_static_float.nlang  13_comprehensive_array_test.nlang  14_multiple_for_loops.nlang  15_pick_statement.nlang  16_len_function_test.nlang  17_input_function_test.nlang  18_repeat_until_test.nlang  19_infinite_loop.nlang  20_advanced_type_inference.nlang  21_sha256.nlang  22_string_array_methods_extreme.nlang  23_advanced_data_structures.nlang  24_std_import_demo.nlang  25_string_library_advanced.nlang  26_math_std_lib_demo.nlang  README.md  infinite_loop.nlang.txt  n.nlang
src/: cli.rs  lib.rs  main.rs  main.ts
src/ast/: mod.rs
src/c_codegen/: mod.rs
src/diagnostics/: color.rs  mod.rs
src/execution_engine/: mod.rs
(+50 files in other folders)
