[package]
name = "nlang"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tempfile = "3.0"
thiserror = "1.0"
anyhow = "1.0"
prettyplease = "0.2.37"
codemap = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
regex = "1.10"

[[bin]]
name = "nscan"
path = "src/nscan/main.rs"

